2010-09-14  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Numpad Enter key returns keyCode 0 instead of 13
        https://bugs.webkit.org/show_bug.cgi?id=45014

        Original patch by Jarred Nicholls <jarred.nicholls@gmail.com>

        There is a missing case statement in the PlatformKeyboardEventQt.cpp
        file to handle the Enter button on the number pad.  Because it is not
        handled, the keyCode returned in a JavaScript event is 0 rather than 13.

        Test: manual-tests/qt/numpad-enter-key.html

        * manual-tests/qt/numpad-enter-key.html: Added.
        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):


Canonical link: https://commits.webkit.org/58214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67483 268f45cc-cd09-0410-ab3c-d52691b4dbfc